bug(HA-13) visibility of buttons during loading
- fixed buttons visibility during loading

--- a/src/app/home/history/history.component.scss
+++ b/src/app/home/history/history.component.scss
@@ -22,6 +22,10 @@
       margin: 0;
     }
   }
+
+  &__loader {
+    text-align: center;
+  }
 }
 
 .add-event-button {
