--- a/src/app/home/records/records.component.scss
+++ b/src/app/home/records/records.component.scss
@@ -23,6 +23,10 @@
     }
   }
 
+  &__loader {
+    text-align: center;
+  }
+
   &__buttons {
     display: flex;
     width: 100%;
